--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           
           <a href="#"><img src="./img/atarde_nova_logo.svg" alt="logo da página" class="atr-logo"></a>
 
-          <section class="atr-header-links">
+          <section id="atr-header-links">
             <a href="#">Assine A Tarde</a>
             <a href="#">Fale Conosco</a>
             <a href="#">Comercial</a>
