commit do footer-2

--- a/index.html
+++ b/index.html
@@ -142,9 +142,29 @@
 
         <div class="column-1">
           <div class="atr-column-footer-2 atr-border-column-space">
-            <h4 class="atr-footer-title atr-color-title">Whatsapp</h4>
+            <h4 class="atr-footer-title atr-color-title-2">Whatsapp</h4>
+            <span class="atr-footer-span-2">
+            <img src="./img/telefone-azul.png" alt="imagem de telefone">
+            (71) 99601-0020
+            </span>
 
+            <h4 class="atr-footer-title atr-color-title-2">Redação</h4>
+            <span class="atr-footer-span-2">
+            <img src="./img/telefone-azul.png" alt="imagem de telefone">
+            (71) 3340-8800
+            </span>
 
+            <h4 class="atr-footer-title atr-color-title-2">Central</h4>
+            <span class="atr-footer-span-2">
+            <img src="./img/telefone-azul.png" alt="imagem de telefone">
+            (71) 3340-8500
+            </span>
+
+            <h4 class="atr-footer-title atr-color-title-2">Classificados</h4>
+            <span class="atr-footer-span-2">
+            <img src="./img/telefone-azul.png" alt="imagem de telefone">
+            (71) 99601-0020
+            </span>
 
           </div>
         </div>    
