segundo commit da main

--- a/index.html
+++ b/index.html
@@ -77,10 +77,55 @@
                 </span>
 
                 <div>
-                  
+                  <button class="atr-button-ouvir">
+                    <img src="./img/botao-play.png" alt="">
+                    Ouvir
+                  </button>
+ 
+                  <div class="atr-redes">
+                    <a href="#"><img src="./img/facebook.png" alt=""></a>
+                    <a href="#"><img src="./img/twitter.png" alt=""></a>
+                    <a href="#"><img src="./img/envelope.png" alt=""></a>
+                    <a href="#"><img src="./img/wpp2.png" alt=""></a>
+                  </div>
+                </div>
+
+              </div>
+
+              <figure class="atr-banner-principal">
+                <img src="./img/bahia17.jpg" alt="">
+              </figure>
+
+              <div class="atr-img-descri">
+                <span>Foto: Divulgação</span>
+                <div class="atr-img-descri-btn">
+                  <button>◑</button>
+                  <button>A-</button>
+                  <button>A+</button>
                 </div>
               </div>
+
             </div>
+      </section>
+
+      <section class="atr-article-main">
+        <article class="atr-article-principal">
+          <p>Quando o sorteio da Copa do Brasil colocou o Flamengo no caminho do Grêmio, a sensação de disparidade de forças fez com que se debatesse, inclusive, se a eliminatória chegaria indefinida ao Maracanã. Pois a goleada rubro-negra em Porto Alegre, sob este aspecto, tem um ar de vitória prevista. Mas acabou conseguida através de um roteiro absolutamente inesperado.</p>
+
+          <h3>E o fez explorando deficiências do rival. Até ali, a atuação rubro-negra reacendera um tema posto em segundo plano por vitórias recentes.</h3>
+          <div class="atr-article-video">
+            <button>
+              <img src="./img/botao-play-ponta-de-seta.png" alt="botão play">
+            </button>
+          </div>
+
+          <div id="atr-manchete">
+            <h4>Deficiências</h4>
+              <p>E o fez explorando deficiências do rival. Até ali, a atuação rubro-negra reacendera um tema posto em segundo plano por vitórias recentes. Nos últimos tempos, nesta curta passagem de Renato Gaúcho no comando, o time mostra virtudes, é óbvio. Mas entre elas não está a capacidade de controle, de impor aos jogos o ritmo e o estilo que interessam a este time, a identidade e cultura de jogo que caracterizam o Flamengo das últimas temporadas. É comum a percepção de que o rival molda o tipo de jogo, e o Flamengo tenta se adaptar quando consegue.</p>
+          </div>
+
+          <blockquote></blockquote>
+        </article>
 
       </section>
 
